Fixed round button bugs when displaying on IE11

--- a/src/components/NavigationBlock/_navigation-block.scss
+++ b/src/components/NavigationBlock/_navigation-block.scss
@@ -1,50 +1,56 @@
 .rh-navigation-block {
     /* Box-modell/beteende */
     min-height: 3.75em; //60px
-
-    //min-width: 10em; //TODO
     background-color: #417795;
 
     border: 0.0625em solid #417795;
     border-radius: 0.375em; //6px
     padding: 0.875em; //14px
 
-    &__button {
-        font-size: 1em;
-        height: 1.875em; //30px
-        width: 1.875em; //30px
-        padding: 0.4em;
-
-        &:hover,
-        &:active {
-            background-color: #D0E3F3;
-            color: #000000;
-        }
-
-        &-icon {
-            &:after {
-                content: "\e829";
-            }
-        }
-    }
-
-    &__title {
+    &__header {
         display: flex;
         align-items: flex-start;
-        overflow-wrap: break-word;
 
+        &-round-button {
+            height: 1.875em; //30px
+            min-height: 1.875em; // Fix for IE11
+            width: 1.875em; //30px
+            min-width: 1.875em; // Fix for IE11
 
+            padding: 0.4em;
 
-        &-link {
-            color: #ffffff;
-            font-size: 1.125em; //18px
-            font-weight: bold;
-            margin: 0.15em 0 0 0.7778em; //15px
-            line-height: 1.4em;
+            font-size: 1em;
+
+            &:hover,
+            &:active {
+                background-color: #D0E3F3;
+                color: #000000;
+            }
+
+            &-icon {
+                &:after {
+                    content: "\e829";
+                }
+            }
+        }
+
+        &-title {
+            margin: 0.15em 0 0 0.8em; //15px
 
             @include large {
-                font-size: 1.25em;
                 margin: 0.05em 0 0 0.7778em; //15px
+            }
+
+            &-link {
+                color: #ffffff;
+                font-size: 1.125em; //18px
+                font-weight: bold;
+                line-height: 1.4em;
+                word-break: break-word;
+
+                @include large {
+                    font-size: 1.25em;
+                }
             }
         }
     }
@@ -59,25 +65,53 @@
 }
 
 // Organism
-.rh-navigation-block-group {
-    padding: 1.1em .4em;
-    background-color: #005069;
+.rh-navigation-block__container {
+    &-grid {
+        padding: 1.1em .4em;
+        background-color: #005069;
 
-    // 2 columns
-    @include medium {
+        // 2 columns
+        @include medium { padding: 1.1em 1em; }
+
+        // 3 columns
+        @include xlarge { padding: 1.1em 4.2em; }
+
+        &__item-container {
+            padding: .6em;
+            @include medium {
+                padding: .65em;
+            }
+        }
+    }
+
+    &-flex {
+        display: flex;
+        flex-direction: column;
+
+        justify-content: space-between;
         padding: 1.1em 1em;
-    }
 
-    // 3 columns
-    @include xlarge {
-        padding: 1.1em 4.2em; //30px - 80px
-    }
+        background-color: #005069;
 
-    &__item-container {
-        padding: .6em;
+        .rh-navigation-block { margin: .6em 0; }
 
+        // 2 columns
         @include medium {
-            padding: .65em;
+            flex-direction: row;
+            flex-wrap: wrap;
+
+            .rh-navigation-block { margin: .6em; width: 47.2%; }
+        }
+
+        // 3 columns
+        @include large {
+            .rh-navigation-block { width: 31%; }
+        }
+
+        @include xlarge {
+            padding: 1.1em 4.4em;
+
+            .rh-navigation-block { width: 31.4%; }
         }
     }
 }
@@ -86,50 +120,8 @@
 .rh-page__content {
     margin-left: auto;
     margin-right: auto;
+
     width: 100%;
-    max-width: 90em;
+    max-width: 90em; //1440px
+    min-width: 20em; //320px
 }
-
-
-// Using flex
-.rh-navigation-block__container {
-    display: flex;
-    flex-direction: column;
-
-    justify-content: space-between;
-    padding: 1.1em 1em;
-
-    background-color: #005069;
-
-    .rh-navigation-block {
-        margin: .6em 0;
-    }
-
-    // 2 columns
-    @include medium {
-        flex-direction: row;
-        flex-wrap: wrap;
-        //padding: 1.875em 3em; //30px - 70px
-
-        .rh-navigation-block {
-            margin: .6em;
-            width: 47.2%;
-        }
-    }
-
-    // 3 columns
-    @include large {
-        .rh-navigation-block {
-            width: 31%;
-        }
-    }
-
-    @include xlarge {
-        padding: 1.1em 4.4em; //30px - 80px
-
-        .rh-navigation-block {
-            width: 31.4%;
-        }
-    }
-}
-
